tests/snapshots/integration__integration_tests__shell_wrapper__tests__switch_with_hooks_zsh.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
[36m◎[39m [36mRunning post-create [1mproject:install[22m:[39m
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Installing dependencies...'[0m[2m
Installing dependencies...
[36m◎[39m [36mRunning post-create [1mproject:build[22m:[39m
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Building project...'[0m[2m
Building project...
[32m✓[39m [32mCreated new worktree for [1mfeature-hooks[22m from [1mmain[22m @ [1m[TMPDIR]/repo.feature-hooks[22m[39m
[2m↳[22m [2mCustomize worktree locations: [90mwt config create[39m[22m
[36m◎[39m [36mRunning post-start [1mproject:server[22m:[39m
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Starting dev server on port 3000'[0m[2m
[36m◎[39m [36mRunning post-start [1mproject:watch[22m:[39m
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Watching for file changes'[0m[2m
